[package]
name = "power"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]

[dependencies]
byteorder = "1.0.0"
clap = "2.23"
futures = "0.1.13"
hyper = "0.11.2"
openssl = "0.9.10"
openssl-sys = "0.9.10"
rayon = "0.8.2"
ring = "0.12.1"
rust-crypto = "0.2.36"
rustc-hex = "1.0.0"
serde_urlencoded = "0.5.1"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
tokio-proto = "0.1.1"
